feat: implement T16 HTTP request smuggling attack tests
- Add HttpRequestSmugglingAttackGenerator with 15 attack types
  * CL.TE smuggling (Content-Length/Transfer-Encoding)
  * TE.CL smuggling (Transfer-Encoding/Content-Length)
  * TE.TE smuggling (Transfer-Encoding obfuscation)
  * Pipeline poisoning attacks
  * Cache deception through smuggling
  * Double Content-Length header attacks
  * Authentication bypass patterns
  * Header manipulation techniques

- Add HttpRequestSmugglingAttackTest with comprehensive coverage
  * 200+ parameterized test cases
  * Specific attack type validation
  * Performance benchmarking (< 8ms requirement)
  * Edge case handling
  * Security event monitoring

- Covers HTTP protocol vulnerabilities per RFC 7230/7231
- Addresses CWE-444 (Inconsistent HTTP Request Interpretation)
- Implements OWASP request smuggling attack patterns

🤖 Generated with [Claude Code](https://claude.ai/code)

Co-Authored-By: Claude <noreply@anthropic.com>